# git-annex-wheel

./: .appveyor.yml  .gitmodules  COPYRIGHT  Makefile  README.md  pyproject.toml
.github/workflows/: build-linux-arm64.yaml  build-linux.yaml  build-linux.yaml_off  build-macos-intel.yaml  build-macos-intel.yaml_off  build-macos-m1.yaml  build-macos-m1.yaml_off  build-windows.yaml  build-windows.yaml_off  test-pypi-wheel.yaml
hatch/: build_hook_plugin.py
python/: build_hook_plugin.py
scripts/: git-annex  git-annex-symlink  git-remote-annex
src/git_annex/: __init__.py
tools/: bump2latest-version  update_copyright
