[project]
# we set the version statically.
# git-annex uses a version scheme that needs to be amended to match
# PyPi's requirements. Moreover, for any given upstream version,
# we must be able to build multiple package versions.
version = "10.20250520b4"
authors = [
  { name = "Joey Hess", email = "id@joeyh.name" },
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: DFSG approved",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Haskell",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Archiving :: Mirroring",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: Utilities",
]
description = "manage files with git, without checking their contents into git"
keywords = [
  "git",
  "data logistics",
  "version control",
]
license = "AGPL-3.0-or-later"
maintainers = [
  { name = "Michael Hanke", email = "mih@ngln.eu" },
]
name = "git-annex"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://git-annex.branchable.com/"
Documentation = "https://git-annex.branchable.com/git-annex"
Issues = "https://git-annex.branchable.com/bugs"
Source = "http://source.git-annex.branchable.com/?p=source.git"
Changelog = "http://source.git-annex.branchable.com/?p=source.git;a=blob;f=CHANGELOG;hb=HEAD"

[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Hatch requires some kind of specification. Use a missing dir to shut it up.
packages = ["git_annex"]

[tool.hatch.build.targets.wheel.shared-scripts]
"git-annex/git-annex" = "git-annex"
"scripts/git-annex-shell" = "git-annex-shell"
"scripts/git-remote-annex" = "git-remote-annex"
"scripts/git-remote-tor-annex" = "git-remote-tor-annex"

[tool.hatch.build.targets.wheel.hooks.custom]
# custom build hook to set some metadata
path = "hatch/build_hook_plugin.py"
# if set, actually perform a build. Otherwise assume that
# the built binary is in bin/
#build = "stack"
